objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Fee_Paid__c</fullName>
        <label>Actual Fee Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_they_work_for__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company they work for</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marks_del__c</fullName>
        <label>Marks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Verbal Commitment</fullName>
                </value>
                <value>
                    <fullName>Registered and Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Status__c</fullName>
        <label>Student Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_email__c</fullName>
        <label>Student email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_fee__c</fullName>
        <label>Student fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Software_Trainers_Inc_Record_Type</fullName>
        <active>true</active>
        <label>Software Trainers Inc Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>email_validation</fullName>
        <active>false</active>
        <errorConditionFormula>isblank(Student_email__c)</errorConditionFormula>
        <errorDisplayField>Student_email__c</errorDisplayField>
        <errorMessage>email is required</errorMessage>
    </validationRules>
</CustomObject>